app/assets/stylesheets/scans.css.scss
// Place all the styles related to the scans controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#scans {
    #show-profile.modal {
        //new custom width
        width: 1220px;
        //must be half of the width, minus scrollbar on the left (30px)
        margin: -300px 0 0 -610px;
    }

    #show-profile .nav {
        margin-bottom: 10px;
        height: 16px;
    }

    #show-profile .modal-header {
        margin-bottom: 10px;
    }

    #scan-type-buttons {
        margin-left: 3%;
    }

    #scan-type-descriptions {
        margin-left: 1%;
    }

    #scan_url {
        width: 100%;
    }

    #scan_description {
        width: 100%;
        height: 100px;
    }

    #scan_type {
        display: none;
    }

    .accordion-group {
        border: 0px;
        border-bottom: 1px solid #E5E5E5
    }

    #charts .pie-chart {
        width: 50%;
        float: left;
    }

    .jqplot-data-label, .jqplot-point-label {
        color: #FFFFFF;
    }

    #progress-percentage {
        font-weight: bold;
        font-size: 17px;
        color: white;
        text-shadow:
                -1px -1px 0 #000,
                1px -1px 0 #000,
                -1px 1px 0 #000,
                1px 1px 0 #000;
    }

    #grid_dispatcher_id, #remote_dispatcher_id {
        width: 100%;
    }

    #error_messages {
        max-height: 200px;
        overflow: auto;
    }

    #issues {
        //table {
        //    table-layout: fixed;
        //    width: 100%;
        //}
        //
        //table td {
        //    width: 100px;
        //    overflow:  hidden;
        //    word-wrap: break-word;
        //}

        .td-url {
            word-wrap: break-word;
        }

    }
}

